k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: htg-crm-prod
  labels:
    name: htg-crm-prod
